--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,12 +6,12 @@ android {
     compileSdk 30
 
     defaultConfig {
-        applicationId "com.onex.beautiful_wallpapers"
+        applicationId "com.onex.trending_wallpapers_2021"
         multiDexEnabled true
         minSdk 16
         targetSdk 30
-        versionCode 3
-        versionName "1.1.2"
+        versionCode 5
+        versionName "1.1.4"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
