--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.onex.beautiful_wallpapers">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.onex.trending_wallpapers_2021">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.SET_WALLPAPER" />
@@ -15,18 +16,22 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.OnlineWallpaperApp">
         <activity
-            android:name="com.onex.beautiful_wallpapers.Exit_Screen"
-            android:exported="true" />
-        <activity
-            android:name="com.onex.beautiful_wallpapers.MainActivity"
-            android:exported="true" />
-        <activity
-            android:name="com.onex.beautiful_wallpapers.FullScreenWallpaper"
-            android:exported="true" />
-        <activity
-            android:name="com.onex.beautiful_wallpapers.Splash_Screen"
+            android:name=".Exit_Screen"
             android:exported="true"
-            android:screenOrientation="portrait">
+            tools:ignore="Instantiatable" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"
+            tools:ignore="Instantiatable" />
+        <activity
+            android:name=".FullScreenWallpaper"
+            android:exported="true"
+            tools:ignore="Instantiatable" />
+        <activity
+            android:name=".Splash_Screen"
+            android:exported="true"
+            android:screenOrientation="portrait"
+            tools:ignore="Instantiatable">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
